--- a/templates/produk/form.html
+++ b/templates/produk/form.html
@@ -11,7 +11,7 @@
     <div class="container mx-auto mt-8">
       <h1 class="text-3xl font-bold mb-4">{{.Title}}</h1>
       <div class="bg-white shadow-md rounded-lg p-6">
-        <form action="/produk/tambah" method="post">
+        <form action="{{.FormAction}}" method="post">
           <div class="mb-4">
             <label for="nama_produk" class="block text-gray-700"
               >Nama Produk</label
