--- a/templates/produk/list.html
+++ b/templates/produk/list.html
@@ -25,8 +25,10 @@
               <th class="py-2 px-4 border-b">Nama Produk</th>
               <th class="py-2 px-4 border-b">Harga</th>
               <th class="py-2 px-4 border-b">Stok</th>
+              <th class="py-2 px-4 border-b">Aksi</th>
             </tr>
           </thead>
+
           <tbody>
             {{range .Products}}
             <tr>
@@ -34,6 +36,13 @@
               <td class="py-2 px-4 border-b">{{.NamaProduk}}</td>
               <td class="py-2 px-4 border-b text-right">{{.Harga}}</td>
               <td class="py-2 px-4 border-b text-center">{{.Stok}}</td>
+              <td class="py-2 px-4 border-b text-center">
+                <a
+                  href="/produk/edit/{{.ID}}"
+                  class="text-blue-500 hover:underline"
+                  >Edit</a
+                >
+              </td>
             </tr>
             {{end}}
           </tbody>
