--- a/templates/produk/form.html
+++ b/templates/produk/form.html
@@ -21,6 +21,7 @@
               name="nama_produk"
               id="nama_produk"
               class="w-full px-3 py-2 border rounded"
+              value="{{.Produk.NamaProduk}}"
               required
             />
           </div>
@@ -31,6 +32,7 @@
               name="harga"
               id="harga"
               class="w-full px-3 py-2 border rounded"
+              value="{{.Produk.Harga}}"
               required
             />
           </div>
@@ -41,6 +43,7 @@
               name="stok"
               id="stok"
               class="w-full px-3 py-2 border rounded"
+              value="{{.Produk.Stok}}"
               required
             />
           </div>
