--- a/templates/produk/form.html
+++ b/templates/produk/form.html
@@ -12,6 +12,15 @@
       <h1 class="text-3xl font-bold mb-4">{{.Title}}</h1>
       <div class="bg-white shadow-md rounded-lg p-6">
         <form action="{{.FormAction}}" method="post">
+          {{if .Error}}
+          <div
+            class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4"
+            role="alert"
+          >
+            <strong class="font-bold">Terjadi Kesalahan!</strong>
+            <span class="block sm:inline">{{.Error}}</span>
+          </div>
+          {{end}}
           <div class="mb-4">
             <label for="nama_produk" class="block text-gray-700"
               >Nama Produk</label
