--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,15 +1,21 @@
-<nav class="bg-white shadow-md mb-8">
+<nav class="bg-[#4A90E2] shadow-md mb-8 sticky top-0 z-50">
   <div class="container mx-auto px-6 py-3">
     <div class="flex items-center justify-between">
-      <div class="text-xl font-bold text-gray-800">
+      <div class="text-xl font-bold text-[#F8F8F8]">
         <a href="/produk">Toko Klontong</a>
       </div>
       <div class="flex space-x-4">
-        <a href="/produk" class="text-gray-600 hover:text-blue-500"
+        <a href="/produk" class="text-[#F8F8F8] hover:text-[#E0E0E0]"
           >Daftar Produk</a
         >
-        <a href="/produk/tambah" class="text-gray-600 hover:text-blue-500"
+        <a href="/produk/tambah" class="text-[#F8F8F8] hover:text-[#E0E0E0]"
           >Tambah Produk</a
+        >
+        <a href="/kasir" class="text-[#F8F8F8] hover:text-[#E0E0E0]"
+          >Kasir</a
+        >
+        <a href="/histori" class="text-[#F8F8F8] hover:text-[#E0E0E0]"
+          >Riwayat Transaksi</a
         >
       </div>
     </div>
